--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,7 +17,8 @@
  @import "font-awesome";
  @import "bootstrap";
 
-@font-face {
+@font-face;
+.insta-title {
 font-family: 'Billabong';
 font-style: normal;
 font-weight: normal;
