--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,7 @@
  @import "font-awesome-sprockets";
  @import "font-awesome";
  @import "bootstrap";
+ @import "billabong-font";
 
 body {
 	background-color: rgb(250,250,250);
